--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.1.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
     "typescript": "^4.8.4",
